# agora.ai

./: README.md
agoraai/: README.md  pyproject.toml
agoraai/knowledge/: user_preference.txt
agoraai/src/agoraai/: crew.py  main.py
agoraai/src/agoraai/config/: agents.yaml  tasks.yaml
agoraai/src/agoraai/tools/: custom_tool.py
