[project]
name = "agoraai"
version = "0.1.0"
description = "agoraai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
agoraai = "agoraai.main:run"
run_crew = "agoraai.main:run"
train = "agoraai.main:train"
replay = "agoraai.main:replay"
test = "agoraai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
